--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
     <head>
-        <title>Ore wa neko desu!~</title>
+        <title>Start!~</title>
         <link rel="stylesheet" href="sexay.css">
     </head>
     <body>
         <div id="block">
-            <img id="mainimg" src="moe.png">
-            <h2 class="top">Nyaa~</h2>
+            <h2 class="top">Hiya~</h2>
             <div class="searcharea">
                 <form method="get" action="http://www.google.com/search">
 
@@ -14,7 +13,7 @@
                             <table border="0" align="center" cellpadding="0">
                                 <tr>
                                     <td>
-                                        <input type="text" class="googlebox" name="q" placeholder="Google desu!" onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='#dedede';" onblur="if(this.value=='')this.value=this.defaultValue; "/>
+                                        <input type="text" class="googlebox" name="q" placeholder="Google!" onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='#dedede';" onblur="if(this.value=='')this.value=this.defaultValue; "/>
                                     </td>
                                 </tr>
                             </table>
@@ -22,17 +21,17 @@
 
                 </form>
             </div>
-            <a href="http://u.quadpiece.net/">
-                <div class="button red" title="FTP Server">
+            <a href="http://drive.google.com">
+                <div class="button red" title="Drive">
                     <div class="txt">
-                        <p class="btntxt">FTP</p>
+                        <p class="btntxt">DRIVE</p>
                     </div>
                 </div>
             </a>
-            <a href="http://artscow.com/">
-                <div class="button blue" title="Artscow">
+            <a href="http://tumblr.com">
+                <div class="button blue" title="Tumblr">
                     <div class="txt">
-                        <p class="btntxt">AC</p>
+                        <p class="btntxt">Tblr</p>
                     </div>
                 </div>
             </a>
@@ -50,52 +49,10 @@
                     </div>
                 </div>
             </a>
-            <a href="http://quadpiece.net/">
-                <div class="button red" title="Quadpiece.net">
+            <a href="http://cutieprogrammer.uk">
+                <div class="button red" title="cutieprogrammer.uk">
                     <div class="txt">
-                        <p class="btntxt">QP</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://dx.com/">
-                <div class="button blue" title="Dealextreme">
-                    <div class="txt">
-                        <p class="btntxt">DX</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://vg.no/">
-                <div class="button red" title="VG">
-                    <div class="txt">
-                        <p class="btntxt">VG</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://kotaku.com/">
-                <div class="button blue" title="Kotaku">
-                    <div class="txt">
-                        <p class="btntxt">Kotaku</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://theverge.com/">
-                <div class="button red" title="The Verge">
-                    <div class="txt">
-                        <p class="btntxt">Verge</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://music.google.com/">
-                <div class="button blue" title="Google Music">
-                    <div class="txt">
-                        <p class="btntxt">Music</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://4chan.org/g/">
-                <div class="button red" title="/g/">
-                    <div class="txt">
-                        <p class="btntxt">/g/</p>
+                        <p class="btntxt">SELF</p>
                     </div>
                 </div>
             </a>
@@ -113,24 +70,10 @@
                     </div>
                 </div>
             </a>
-            <a href="http://facebook.com/QuadPiece/">
+            <a href="http://facebook.com/">
                 <div class="button blue" title="Facebook">
                     <div class="txt">
                         <p class="btntxt">FB</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://crunchyroll.com/">
-                <div class="button red" title="Crunchyroll">
-                    <div class="txt">
-                        <p class="btntxt">CR</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://last.fm/user/quadpiece/">
-                <div class="button blue" title="last.fm">
-                    <div class="txt">
-                        <p class="btntxt">last.fm</p>
                     </div>
                 </div>
             </a>
@@ -138,76 +81,6 @@
                 <div class="button red" title="TweetDeck">
                     <div class="txt">
                         <p class="btntxt">TwDe</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://anilist.co/">
-                <div class="button blue" title="Anilist">
-                    <div class="txt">
-                        <p class="btntxt">Anilist</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://osu.ppy.sh/u/QuadPiece">
-                <div class="button red" title="osu!profile">
-                    <div class="txt">
-                        <p class="btntxt">osu!</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://quadcloud.net/">
-                <div class="button blue" title="QuadCloud">
-                    <div class="txt">
-                        <p class="btntxt">Cloud</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://uptimerobot.com/">
-                <div class="button red" title="UptimeRobot">
-                    <div class="txt">
-                        <p class="btntxt">Uptime</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://www.w3schools.com/">
-                <div class="button blue" title="W3 school">
-                    <div class="txt">
-                        <p class="btntxt">W3</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://www.vultr.com/">
-                <div class="button red" title="Vultr">
-                    <div class="txt">
-                        <p class="btntxt">Vultr</p>
-                    </div>
-                </div>
-            </a>
-            <a href="https://nettbanken.nordea.no/netbank/securelogin/secure/login">
-                <div class="button blue" title="Nordea">
-                    <div class="txt">
-                        <p class="btntxt">Bank</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://www.ask.fm/">
-                <div class="button red" title="Ask.fm">
-                    <div class="txt">
-                        <p class="btntxt">Ask</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://www.twitpic.com/">
-                <div class="button blue" title="Twitpic">
-                    <div class="txt">
-                        <p class="btntxt">TwPic</p>
-                    </div>
-                </div>
-            </a>
-            <a href="http://dev.twoffein.com/">
-                <div class="button red" title="Twoffein">
-                    <div class="txt">
-                        <p class="btntxt">TwEin</p>
                     </div>
                 </div>
             </a>
@@ -222,21 +95,11 @@
             <br />
             <div id="searcharea">
                 <p class="searchtitle">Video~</p>
-                <form class="search" method="get" action="http://www.nyaa.se/" accept-charset="utf-8">
-                    <input class="serbox" type="text" name="term" value="" accesskey="f" placeholder="Nyaa desu!" class="inputsearchterm">
-                </form>
-
                 <form class="search" action="http://www.youtube.com/results" method="get">
                     <input class="serbox" id="vb_yt_search-term" name="search_query" placeholder="YouTube desu!" type="text" maxlength="128" />
                 </form>
             </div>
-            <div id="searcharea">
-                <p class="searchtitle">Stuff~</p>
-                <form class="search" method="get" action="http://www.thepiratebay.se/s/" accept-charset="utf-8">
-                    <input class="serbox" type="text" name="term" value="" accesskey="f" placeholder="Pirate desu!" class="inputsearchterm">
-                </form>
-                <img src="kon.png" id="bottomimg">
-            </div>
+        </div>
         </div>
     </body>
 </html>
